[package]
name = "kvs"
version = "0.1.0"
authors = ["XFFXFF <1247714429@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
structopt = "0.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bson = "1.1.0"
clap = "2.33.0"
log = "0.4.0"
env_logger = "0.8.2"
sled = "0.34.6"
